--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,5 +74,5 @@ jobs:
           file: Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/shortener-app:${{ env.VERSION }} # Use the version from setup.py
-            ghcr.io/${{ github.repository_owner }}/shortener-app:latest # Optional latest tag
+            ghcr.io/${{ github.repository_owner }}/shortener-app:${{ env.VERSION }}
+            ghcr.io/${{ github.repository_owner }}/shortener-app:latest
